addons/prometheus-operator/kyverno/resources/kyverno-cleanup/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kyverno-cleanup-monitoring
  namespace: KYVERNO_CLEANUP_NAMESPACE
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ""
    ports:
    - port: 0
      protocol: TCP
